# snappea

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: flake8.yml  tests.yml
example_django_project/: manage.py
example_django_project/example_django_project/: asgi.py  settings.py  urls.py  wsgi.py
snappea/: decorators.py  example_tasks.py  foreman.py  sentry_sdk_extensions.py  stats.py  tests.py
snappea/migrations/: 0002_create_models.py
